<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rajesh.acetcse.ui.home.HomeFragment"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.rajesh.acetcse.ui.dashboard.DashboardFragment"
        android:label="@string/view"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.rajesh.acetcse.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>